--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       </div>
 
       <div class="counter">
-        <i class="fa-brands fa-3x fa-instagram"></i>
+        <i class="fa-brands fa-3x fa-facebook"></i>
         <h2 class="count" data-count="13000">0</h2>
-        <p>Instagram</p>
+        <p>Facebook</p>
       </div>
 
       <div class="counter">
@@ -33,5 +33,7 @@
         <p>Youtube</p>
       </div>
     </section>
+
+    <script src="./js/index.js"></script>
   </body>
 </html>
